Day 30: Fixed mobile responsive overlap bug in dashboard

--- a/03-react/src/App.css
+++ b/03-react/src/App.css
@@ -17,3 +17,17 @@
 .card h2 {
   color: #222;
 }
+
+
+ul {
+  text-align: left;
+  padding-left: 20px;
+}
+
+li {
+  display: flex;
+  flex-wrap:wrap;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
